--- a/sfg.html
+++ b/sfg.html
@@ -475,7 +475,7 @@
         background-image: url("cui.webp");
       }
       .homestays-card {
-        background-image: url("https://images.unsplash.com/photo-1560185127-6ed189bf02f4?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80");
+        background-image: url("hot.jpeg");
       }
       .events-card {
         background-image: url("poo.webp");
